scss/4-pages/_caseStudy.scss
.intro {
    display: grid;
    grid-template-columns: 1.2fr 1fr;
    margin: 6rem 0 6rem 0;

    &__info {
        margin-right: 1rem;

    }

    &__header {
        margin-bottom: -1rem;
    }

    &__subheader {
        margin-bottom: 2rem;
        color: $gray;
    }

    &__text {
        margin-bottom: 2rem;
    }

    &__tech {
        margin-bottom: 2rem;
    }

    &__img {
        margin-top: 1rem;
    }
}

.pic-bg-full {
    width: 99.5vw; //browsers display an X-axis scroll bar if you have it at 100vw
    position: relative;
    left: 50%;
    right: 50%;
    margin: 0 -50vw 8rem -50vw;

    &__container {
        margin: 0 auto;
        max-width: $max-width;
        display: grid;
        gap: 3rem;

        &1 {
            grid-template-columns: 1fr 1fr;
            padding: 8rem 2rem;
        }

        &2 {
            grid-template-columns: 1fr 2fr;
            padding: 10rem 2rem;
        }
    }

    &__header {
        margin-bottom: 2rem;
    }

    &__desc {
        margin-bottom: 1.5rem;
    }

    ul {
        list-style: inside;
    }

    li {
        margin-bottom: 1rem;
    }
}

.pages {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin-bottom: 10rem;
    padding: 2rem;

    .img-desk {
        display: block;
    }

    .img-mobile {
        display: none;
    }

    &-right &__text {
        margin-right: 0;
        margin-left: 2rem;
        text-align: right;
    }

    &__text {
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin-right: 2rem;
    }
}

.grid-col1 {
    display: grid;
    grid-template-columns: 1fr 2fr;
    margin: 10rem 0;

    &__desc {
        margin-top: 1rem;

        .social-cta {
            justify-content: center;
            gap: 2rem;
        }
    }

    p {
        margin-bottom: 2rem;
    }

    img {
        margin: 2rem 0;
    }
}

@media screen and (max-width: $resp-tablet) {
    .intro {
        display: flex;
        flex-direction: column-reverse;

        &__img {
            margin: 0 0 4rem;
        }
    }

    .pic-bg-full__container1 {
        grid-template-columns: 1fr;
    }

    .pic-bg-full__container2 {
        grid-template-columns: 1fr;
    }

    .pages {
        display: flex;
        flex-direction: column-reverse;

        img {
            margin-bottom: 3rem;
        }

        .img-desk {
            display: none;
        }

        .img-mobile {
            display: block;
        }

        &__header {
            margin-bottom: 1rem;
        }

        &__text {
            margin-right: 0;
            margin-left: 0;
        }

        &-right &__text {
            text-align: left;
            margin-right: 0;
            margin-left: 0;
        }
    }

    .grid-col1 {
        grid-template-columns: 1fr;
        margin: 0 0 8rem;

        &__desc .social-cta {
            gap: 1rem;
        }
    }
}

